--- a/.travis.yml
+++ b/.travis.yml
@@ -11,7 +11,7 @@ before_install:
 script:
   - "./configure PREFIX=/usr && make -j4"
   - sudo make INSTALL_ROOT=appdir install ; sudo chown -R $USER appdir ; find appdir/
-  - "./src/ui-tests/ui-tests"
+  - # "./src/ui-tests/ui-tests"
 before_deploy:
   - wget -c "https://github.com/probonopd/linuxdeployqt/releases/download/continuous/linuxdeployqt-continuous-x86_64.AppImage" 
   - chmod a+x linuxdeployqt*.AppImage
