--- a/.travis.yml
+++ b/.travis.yml
@@ -9,7 +9,7 @@ before_install:
   - sudo apt-get -qq update
   - sudo apt-get install -y qtbase5-dev libqt5webkit5-dev libqt5svg5-dev qttools5-dev-tools
 script:
-  - "./configure PREFIX=/usr && make -j4"
+  - ./configure PREFIX=/usr && make -j4
   - # Dear upstream, please change this so that the next line installs to ./appdir rather than to ./src/ui/appdir 
   - sudo make INSTALL_ROOT=appdir install ; sudo chown -R $USER ./src/ui/appdir ; find ./src/ui/appdir/
   - # "./src/ui-tests/ui-tests"
