--- a/.travis.yml
+++ b/.travis.yml
@@ -12,6 +12,7 @@ script:
   - ./configure PREFIX=/usr && make -j4
   - # Dear upstream, please change this so that the next line installs to ./appdir rather than to ./src/ui/appdir 
   - sudo make INSTALL_ROOT=appdir install ; sudo chown -R $USER ./src/ui/appdir ; find ./src/ui/appdir/
+  - mv ./src/ui/appdir/usr/local/* ./src/ui/appdir/usr/ # Dear upstream, please change this so that this is not needed
   - # "./src/ui-tests/ui-tests"
   - wget -c "https://github.com/probonopd/linuxdeployqt/releases/download/continuous/linuxdeployqt-continuous-x86_64.AppImage" 
   - chmod a+x linuxdeployqt*.AppImage
