--- a/.travis.yml
+++ b/.travis.yml
@@ -12,9 +12,9 @@ install:
   - source /opt/qt*/bin/qt*-env.sh
 
 script:
-  - ./configure --prefix=/usr
+  - qmake CONFIG+=release PREFIX=/usr
   - make -j$(nproc)
-  - make install DESTDIR=$(readlink -f appdir) ; find appdir/
+  - make INSTALL_ROOT=appdir -j$(nproc) install ; find appdir/
   - wget -c -nv "https://github.com/probonopd/linuxdeployqt/releases/download/continuous/linuxdeployqt-continuous-x86_64.AppImage"
   - chmod a+x linuxdeployqt-continuous-x86_64.AppImage
   - unset QTDIR; unset QT_PLUGIN_PATH ; unset LD_LIBRARY_PATH
