--- a/.travis.yml
+++ b/.travis.yml
@@ -5,11 +5,13 @@ dist: trusty
 
 before_install:
   - sudo add-apt-repository ppa:beineri/opt-qt-5.10.1-trusty -y
+  - sudo add-apt-repository ppa:ubuntu-toolchain-r/test -y
   - sudo apt-get update -qq
 
 install:
-  - sudo apt-get -y install qt510base qt510webengine qt510webchannel qt510websockets qt510svg qt510tools qt510translations qt510tools libuchardet-dev
+  - sudo apt-get -y install g++-7 qt510base qt510webengine qt510webchannel qt510websockets qt510svg qt510tools qt510translations qt510tools libuchardet-dev
   - source /opt/qt*/bin/qt*-env.sh
+  - sudo update-alternatives --install /usr/bin/g++ g++ /usr/bin/g++-7 90
 
 script:
   - ./configure --prefix=/usr --qmake /opt/qt*/bin/qmake --lrelease /opt/qt*/bin/lrelease # https://github.com/notepadqq/notepadqq/issues/817#issuecomment-459951868
@@ -17,8 +19,9 @@ script:
   - make install DESTDIR=$(readlink -f appdir) ; find appdir/
   - wget -c -nv "https://github.com/probonopd/linuxdeployqt/releases/download/continuous/linuxdeployqt-continuous-x86_64.AppImage"
   - chmod a+x linuxdeployqt-continuous-x86_64.AppImage
-  - unset QTDIR; unset QT_PLUGIN_PATH ; unset LD_LIBRARY_PATH
-  # export VERSION=... # linuxdeployqt uses this for naming the file
+  - mkdir -p appdir/usr/optional/ ; wget -c https://github.com/darealshinji/AppImageKit-checkrt/releases/download/continuous/exec-x86_64.so -O ./appdir/usr/optional/exec.so
+  - mkdir -p appdir/usr/optional/libstdc++/ ; cp /usr/lib/x86_64-linux-gnu/libstdc++.so.6 ./appdir/usr/optional/libstdc++/
+  - ( cd appdir ; rm AppRun ; wget -c https://github.com/darealshinji/AppImageKit-checkrt/releases/download/continuous/AppRun-patched-x86_64 -O AppRun ; chmod a+x AppRun)
   - ./linuxdeployqt-continuous-x86_64.AppImage appdir/usr/share/applications/*.desktop -appimage
 
 after_success:
